Unreleased

- Gruppenschnüren: Nummerierung Gruppen der gleichen Sektion zusätzlich pro
  Kategorie, z.B. Gruppe "Diessenhofen" in JP, "Diessenhofen-1" und
  "Diessenhofen-2" in Aktive. Vorher gab es dann ein "Diessenhofen-3" in JP.

- Beste Schiffe pro Sektion: Bei Punktgleichheit (z.B. zweite/dritte Position
  beim Glanzenburgcup 2025) erscheint die Punktzahl wieder.


Version 3.3.0 (28. Mai 2025)

- Schwimmen/Einzelschnüren: Einführung Kategorie FII und FIII

- Fix: Disziplinen mit Umlauten, z.B. "Bootsfährenbau" und "Einzelschnüren",
  können wieder wie gehabt dazugefügt werden.

- Sektionsfahren: Notenblätter aller Sektionen mit einem Click drucken.

- Fix: Im Sektionsfahren werden die Punkte wieder mit 3 Stellen nach dem Komma
  dargestellt. Mit Version 3.2.3 (93a6a46d167db93db49e9b146aa5e042d6a47739)
  sollte einfach das Dezimaltrennzeichen ',' durch '.' ersetzt werden. Dabei
  ist jedoch fälschlicherweise auf nur 1 Stelle nach dem Komma gerundet worden.


Version 3.2.4 (23. Mai 2025)

- Sektionsfahren: Mache Werbung für ranglisten.pontonier.ch auf PDFs.


Version 3.2.3 (22. Mai 2025)

- Sektionsfahren: Abzüge auf HTML Rangliste darstellen. Somit sieht man sofort,
  wer Abzüge hat und dann passiert der Fehler nicht mehr wie bei Wynau in
  Bremgarten 2018, wo versehentlich 10 Punkte bei einer Gruppe (statt 1 Punkt)
  abgezogen wurde.

- Sektionsfahren: Punkte/Kommentar für Gruppen/Sektionsabzüge sind optional

- Sektionsfahren: In HTML die Kommastellen als '.' und nicht ',' zeigen.


Version 3.2.2 (2. März 2025)

- Transparentes Favicon, damit es besser im Browser aussieht.
- Fix: Beste Saisonpaar heisst nun überall genau so.


Version 3.2.1 (28. August 2024)

- Fix: Beste Saisonfahrerpaar als PDF funktioniert nun auch auf Windows.


Version 3.2.0 (26. August 2024)

- Beste Saisonfahrerpaar nun auch als PDF
- Fix: Zeitzuschläge 0 Sekunden sind wieder möglich, speziell beim Schnüren
- Fix: Auf dem Notenblatt bei Punkten kann man wieder mit `Enter` zum nächsten