@@ -1,0 +1,23 @@
+# Generated by Django 5.0.4 on 2025-06-12 14:38
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('sasse', '0004__bewertung_calc_view'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='sektionsfahrengruppe',
+            name='split_name_auf_rangliste',
+            field=models.BooleanField(default=False),
+        ),
+        migrations.AlterField(
+            model_name='disziplin',
+            name='name',
+            field=models.SlugField(allow_unicode=True),
+        ),
+    ]
