@@ -16,6 +16,8 @@
     <tr>
       <th>Gruppe:</th>
       <td>{{ form.name.errors }}{{ form.name }}</td>
+      <td>Vervielfachen auf Rangliste:</td>
+      <td>{{ form.split_name_auf_rangliste.errors }}{{ form.split_name_auf_rangliste }}</td>
     </tr>
     <tr>
       <th>{{ form.chef.label }}:</th>
