@@ -1,5 +1,9 @@
 Unreleased
 
+- Sektionsfahren: Mehrere Sektionen können nun auf der Rangliste den gleichen
+  Platz einnehmen. Entspricht einer Änderung im Wettkampfreglement von November
+  2024.
+
 - Gruppenschnüren: Nummerierung Gruppen der gleichen Sektion zusätzlich pro
   Kategorie, z.B. Gruppe "Diessenhofen" in JP, "Diessenhofen-1" und
   "Diessenhofen-2" in Aktive. Vorher gab es dann ein "Diessenhofen-3" in JP.
